# yaml_to_openstep_plist

./: README.md  build.py  pyproject.toml
example/: test.py
