[project]
name = "yaml_to_openstep_plist"
version = "0.1.0"
description = "A Python library to convert YAML data to OpenStep plist format."
readme = "README.md"
authors = [{name = "Sandy10247"}]
license = {text = "MIT"}
requires-python = ">=3.6"
dependencies = ["pyyaml>=5.1"]

[project.urls]
Homepage = "https://github.com/Sandy10247/yaml_to_openstep_plist"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"